--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,6 +10,6 @@
     </figure>
     <h1><%= title %></h1>
     <p>Bienvenidos a <%= title %></p>
-    <a href="/movies/">Lista de películas</a>
+    <a href="/genres/">Lista de géneros</a>
   </body>
 </html>
